--- a/design.css
+++ b/design.css
@@ -59,8 +59,8 @@ main {
 
 .pupil_gene_infor_header {
     text-align: center;
-    background-color: skyblue;
-    border-bottom: 4px solid black;
+    background-color: slategray;
+    border-bottom: 4px solid slateblue;
 }
 
 .pupil_gene_info_column {
@@ -68,4 +68,47 @@ main {
     justify-content: space-between;
     text-align: left;
     line-height: 1.8;
+}
+
+.c_header {
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    background-color: slateblue;
+}
+
+.unit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.unit div {
+    display: flex;
+    gap: 0.5rem;
+}
+.unit h2 {
+    letter-spacing: 4mm;
+  }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border-spacing: 30px;
+}
+
+td {
+    padding: 8px;
+    text-align: left;
+}
+.table_placer {
+    justify-content: spa;
+}
+
+.all_units {
+    font-weight: bolder;
+}
+
+.all_units div {
+    border-top: 3px solid black;
+    max-width: 40%;
 }
